[tool.poetry]
name = "traffic"
version = "0.1.0"
description = ""
authors = ["dchnkoo <valera.dchn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlmodel = "^0.0.22"
pydantic = "2.9.2"
aiogram = "^3.15.0"
alembic = "^1.14.0"
pydantic-settings = "^2.7.0"
psycopg2-binary = "^2.9.10"
asyncpg = "^0.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
